# ThaiPractice

./: .gitignore  Cargo.toml  README.md
.claude/: launch.json
public/: app.js  index.html  keyboard.js  manifest.json  style.css
src/: logic.rs  main.rs
tests/: api.rs
