[package]
name = "thai-practice"
version = "0.1.0"
edition = "2024"

# argon2 is unusably slow unoptimized; keep it fast in dev/test builds
[profile.dev.package.argon2]
opt-level = 3
[profile.dev.package.blake2]
opt-level = 3

[dependencies]
argon2 = "0.5.3"
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde_json = "1.0.150"
tiny_http = "0.12.0"
